simplified structure, factorisation, cleaned useless files
Signed-off-by: julesbressan <58834734+julesbressan@users.noreply.github.com>

--- a/preprocessing/_accident_location.ipynb
+++ b/preprocessing/_accident_location.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "from config import *\n"
+    "from generate_preprocessed_data import DATA_ROOTFOLDER\n"
    ]
   },
   {
@@ -408,7 +408,7 @@
     }
    ],
    "source": [
-    "raw_df = pd.read_csv(CFG.data_rootfolder / \"ACCIDENT_LOCATION.csv\")\n",
+    "raw_df = pd.read_csv(DATA_ROOTFOLDER / \"ACCIDENT_LOCATION.csv\")\n",
     "df = raw_df\n",
     "raw_df.head(20)"
    ]
