--- a/preprocessing/_atm_conditions.ipynb
+++ b/preprocessing/_atm_conditions.ipynb
@@ -95,10 +95,10 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from structure import *\n",
+    "from generate_preprocessed_data import *\n",
     "\n",
     "print(\"Importing raw data...\")\n",
-    "df_atm_conditions = pd.read_csv(RAW_DATA_ROOTFOLDER / \"ATMOSPHERIC_COND.csv\")\n",
+    "df_atm_conditions = pd.read_csv(DATA_ROOTFOLDER / \"ATMOSPHERIC_COND.csv\")\n",
     "df_atm_conditions.head()\n"
    ]
   },
