--- a/preprocessing/_nodes.ipynb
+++ b/preprocessing/_nodes.ipynb
@@ -10,7 +10,7 @@
     "from datetime import datetime\n",
     "import calendar\n",
     "import numpy as np\n",
-    "from config import *"
+    "from generate_preprocessed_data import *"
    ]
   },
   {
@@ -273,7 +273,7 @@
     }
    ],
    "source": [
-    "raw_df = pd.read_csv(CFG.data_rootfolder / \"NODE.csv\")\n",
+    "raw_df = pd.read_csv(DATA_ROOTFOLDER / \"NODE.csv\")\n",
     "df = raw_df\n",
     "raw_df"
    ]
