--- a/preprocessing/_person.ipynb
+++ b/preprocessing/_person.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from config import *\n",
+    "from generate_preprocessed_data import *\n",
     "import pandas as pd \n"
    ]
   },
@@ -20,7 +20,7 @@
      "output_type": "stream",
      "text": [
       "/var/folders/lg/ssxqzhrj33g6tvlvnhwsmxxr0000gn/T/ipykernel_28051/139228539.py:1: DtypeWarning: Columns (6,9,10,13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  raw_df = pd.read_csv(CFG.data_rootfolder / \"person.csv\")\n"
+      "  raw_df = pd.read_csv(DATA_ROOTFOLDER / \"person.csv\")\n"
      ]
     },
     {
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "raw_df = pd.read_csv(CFG.data_rootfolder / \"person.csv\")\n",
+    "raw_df = pd.read_csv(DATA_ROOTFOLDER / \"person.csv\")\n",
     "df = raw_df\n",
     "df.head()"
    ]
