--- a/preprocessing/_vehicle.ipynb
+++ b/preprocessing/_vehicle.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from config import *"
+    "from generate_preprocessed_data import *"
    ]
   },
   {
@@ -20,7 +20,7 @@
      "output_type": "stream",
      "text": [
       "/var/folders/lg/ssxqzhrj33g6tvlvnhwsmxxr0000gn/T/ipykernel_30585/642379686.py:1: DtypeWarning: Columns (3,25,26,35,36) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  raw_df = pd.read_csv(CFG.data_rootfolder/\"VEHICLE.csv\")\n"
+      "  raw_df = pd.read_csv(DATA_ROOTFOLDER/\"VEHICLE.csv\")\n"
      ]
     },
     {
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "raw_df = pd.read_csv(CFG.data_rootfolder/\"VEHICLE.csv\")\n",
+    "raw_df = pd.read_csv(DATA_ROOTFOLDER/\"VEHICLE.csv\")\n",
     "df = raw_df\n",
     "df.columns"
    ]
